en/4.0/admin/webAuthentication-guide.rst
===========================
Web authentication settings
===========================

This page is generated by Machine Translation from Japanese.

Web authentication settings
===========================

Describes Web authentication is required when set against here, using
Web crawling. |Fess| is corresponding to a crawl for BASIC authentication
and DIGEST authentication.

How to set up
-------------

In Administrator account after logging in, click menu Web
authentication.

|image0|

Host name
---------

Specifies the host name of the site that requires authentication. Web
crawl settings you specify if applicable in any host name.

Port
----

Specifies the port of the site that requires authentication. Specify-1
to apply for all ports. Web crawl settings you specified and if
applicable on any port.

Realm
-----

Specifies the realm name of the site that requires authentication. Web
crawl settings you specify if applicable in any realm name.

Authentication methods
----------------------

Select the authentication method. You can use BASIC authentication,
DIGEST authentication or NTLM authentication.

User name
---------

Specifies the user name to log in authentication.

Password
--------

Specifies the password to log into the certification site.

Parameter
---------

Sets if the authentication site login required settings. You can set the
workstation and domain values for NTLM authentication. If you want to
write as.

::

    workstation=HOGE
    domain=FUGA

Web name
--------

Select to apply the above authentication settings Web settings name.
Must be registered in advance Web crawl settings.

.. |image0| image:: ../../../resources/images/en/4.0/webAuthentication-1.png
